try the blue wideness, fix for misaligned text on wordpress button

--- a/src/app/shared/components/archive-switcher-dialog/archive-switcher-dialog.component.scss
+++ b/src/app/shared/components/archive-switcher-dialog/archive-switcher-dialog.component.scss
@@ -1,11 +1,11 @@
 @import 'variables';
 
 :host {
-  display: flex;
   width: 100%;
   height: 100%;
-  flex-direction: column;
-  flex-wrap: nowrap;
+  background-color: $PR-blue;
+  display: block;
+  color: white;
   padding: 10px 10px 0px;
 
   @media screen and (min-width: 768px) {
@@ -15,12 +15,29 @@
   }
 }
 
+.archive-switcher-wrapper {
+  background-color: $PR-blue;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  margin: 0 auto;
+  height: 100%;
+
+  @media screen and (min-width: 768px) {
+    max-width: 400px;
+  }
+}
+
 .current-archive, .archive-list-button {
   flex: 0 1 auto;
 }
 
-.current-archive {
-  margin-bottom: 10px;
+.current-archive pr-archive-small {
+  // margin-bottom: 10px;
+}
+
+.archive-list-button {
+  display: flex;
 }
 
 .archive-list-wrapper {
